--- a/docs/developers/quickstart/info-contracts.mdx
+++ b/docs/developers/quickstart/info-contracts.mdx
@@ -258,6 +258,11 @@ So, as users take actions on the network, there are changes to those accounts an
           <td>https://linea.nftscan.com/</td>
           <td>n/a</td>
         </tr>
+        <tr>
+          <td>Lineaplorer</td>
+          <td>https://lineaplorer.build/</td>
+          <td>https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API</td>
+        </tr>
       </tbody>
     </table>
   </TabItem>
